adjusted mobile styles. fixed horizontal overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -80,7 +80,7 @@ main#main {
 	color: var(--faded-yellow);
 	font-family: var(--accent-font), cursive, Calibri, sans-serif;
 	text-transform: uppercase;
-	font-size: 35px;
+	font-size: 30px;
 	letter-spacing: 1rem;
 }
 
@@ -258,6 +258,18 @@ main section:nth-of-type(4) {
 /* Media queries */
 
 @media all and (max-width: 575px) {
+	.content {
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.highlight {
+		font-size: 60%;
+		letter-spacing: 0.5rem;
+	}
+	.topic {
+		font-size: 120%;
+		margin-top: 0;
+	}
 	.divider {
 		height: 400px;
 	}
@@ -277,6 +289,10 @@ main section:nth-of-type(4) {
 }
 
 @media all and (max-width: 767px) {
+
+	.highlight {
+		font-size: 80%;
+	}
 
 	section#about, section#portfolio, section#blog {
 		margin-top: 20px;
@@ -304,6 +320,10 @@ main section:nth-of-type(4) {
 }
 
 @media all and (min-width: 768px) and (max-width: 990px) {
+	.highlight {
+		font-size: 120%;
+	}
+
 	section#about, section#portfolio, section#blog {
 		margin-top: 40px;
 		margin-bottom: 40px;
